sfSandBoxCode/force-app/main/default/objects/Sanergy_Settings_Fleet__c/Sanergy_Settings_Fleet__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sanergy Settings - Fleet</label>
</CustomObject>