sfSandBoxCode/force-app/main/default/objects/Sanergy_Settings_Fleet__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <label>company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>