sfSandBoxCode/force-app/main/default/objects/Sanergy_Settings_Fleet__c/fields/Dimension_1_id__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1_id__c</fullName>
    <label>Dimension 1 id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>