sfSandBoxCode/force-app/main/default/objects/Sanergy_Settings_Fleet__c/fields/Dimension_3_id__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3_id__c</fullName>
    <label>Dimension 3 id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>